--- a/ASProjektWPF/Pages/Profil_EditItem.xaml
+++ b/ASProjektWPF/Pages/Profil_EditItem.xaml
@@ -47,7 +47,7 @@
                 <Label Grid.Column="0" Grid.Row="4" Content="Obowiącki"/>
                 <TextBox x:Name="TxtB_Responsibilities" Text="{Binding Responsibilities}" Grid.Column="1" Grid.Row="4" Height="100" TextWrapping="Wrap" AcceptsReturn="True" VerticalScrollBarVisibility="Visible"/>
                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Grid.Column="0" Grid.Row="5" Grid.ColumnSpan="2" Margin="0,10,0,0">
-                    <Button Content="Anuluj" Background="White" Foreground="Gray" Style="{StaticResource ProfileCancelButtonTheme}" Click="Btn_Form_Cancel_Click"/>
+                    <!--<Button Content="Anuluj" Background="White" Foreground="Gray" Style="{StaticResource ProfileCancelButtonTheme}" Click="Btn_Form_Cancel_Click"/>-->
                     <Button Content="Zaktualizuj" Background="#414141" Foreground="White" Style="{StaticResource ProfileSaveButtonTheme}" Click="Btn_Form_Update_Click" CommandParameter="{Binding .}"/>
                 </StackPanel>
             </Grid>
@@ -98,8 +98,58 @@
                     </StackPanel>
                 </Grid>
                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Grid.Column="0" Grid.Row="4" Grid.ColumnSpan="2" Margin="0,10,0,0">
-                    <Button x:Name="Btn_Education_Cancel" Content="Annuluj"  Background="White" Foreground="Gray" Style="{StaticResource ProfileCancelButtonTheme}" Click="Btn_Form_Cancel_Click"/>
+                    <!--<Button x:Name="Btn_Education_Cancel" Content="Annuluj"  Background="White" Foreground="Gray" Style="{StaticResource ProfileCancelButtonTheme}" Click="Btn_Form_Cancel_Click"/>-->
                     <Button x:Name="Btn_Education_Update" Content="Zaktualizuj" Background="#414141" Foreground="White" Style="{StaticResource ProfileSaveButtonTheme}" Click="Btn_Form_Update_Click"/>
+                </StackPanel>
+            </Grid>
+            <Grid x:Name="G_Language" Visibility="Collapsed">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                </Grid.RowDefinitions>
+                <StackPanel Orientation="Horizontal">
+                    <Label Content="Język: "/>
+                    <ComboBox x:Name="CB_LanguageSelected" SelectedIndex="0">
+                        <ComboBoxItem>Polski</ComboBoxItem>
+                    </ComboBox>
+                </StackPanel>
+                <StackPanel Orientation="Horizontal" Grid.Column="1">
+                    <Label Content="Poziom: "/>
+                    <ComboBox x:Name="CB_LanguageLevel"  SelectedIndex="0">
+                        <ComboBoxItem>zaawansowany</ComboBoxItem>
+                    </ComboBox>
+                </StackPanel>
+                
+                <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Grid.Row="1" Grid.ColumnSpan="3">
+                    <!--<Button x:Name="Btn_Language_Cancel" Content="Annuluj" HorizontalAlignment="Right" Background="White" Foreground="gray" VerticalAlignment="Center" Style="{StaticResource ProfileCancelButtonTheme}" Click="Btn_Form_Cancel_Click"/>-->
+                    <Button x:Name="Btn_Language_Save" Content="Zapisz" HorizontalAlignment="Right" Background="#414141" Foreground="White" VerticalAlignment="Center" Style="{StaticResource ProfileSaveButtonTheme}" Click="Btn_Form_Update_Click"/>
+                </StackPanel>
+            </Grid>
+            <Grid x:Name="G_Link" Visibility="Collapsed">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="100"/>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="100"/>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                </Grid.RowDefinitions>
+                <Label Content="Adres URL"/>
+                <TextBox x:Name="TxtB_URL" Grid.Column="1" Text="{Binding Name}" Style="{StaticResource ProfileTextBox}"/>
+                <Label Grid.Row="1" Content="Typ linku"/>
+                <ComboBox x:Name="CB_Type" SelectedValue="{Binding Type}" Grid.Column="1" Grid.Row="1" SelectedIndex="0">
+                    <ComboBoxItem>(Wybierz)</ComboBoxItem>
+                    <ComboBoxItem>(Wybierz)2</ComboBoxItem>
+                </ComboBox>
+                <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Grid.Row="2" Grid.Column="1" >
+                    <!--<Button x:Name="Btn_Link_Cancel" Content="Annuluj"  Background="White" Foreground="Gray" Style="{StaticResource ProfileCancelButtonTheme}" Click="Btn_Form_Cancel_Click"/>-->
+                    <Button x:Name="Btn_Link_Add" Content="Zapisz" Background="#414141" Foreground="White" Style="{StaticResource ProfileSaveButtonTheme}" Click="Btn_Form_Update_Click"/>
                 </StackPanel>
             </Grid>
         </StackPanel>
